# pathfinding

./: README.md  pyproject.toml
.github/: test_workflow.yml
.github/workflows/: test_workflow.yml  workflow.yml
code/: README.md  benchmark_utils.py  kdtree_dijkstra.py  main.py  pathfinder.py  requirements.txt
code/data/: test_data.csv
interactive/: dijkstra_vs_pathfinder_visual.ipynb
paper/: main.tex
resources/: benchmarking.py  load_coordinates.py
src/pathfinder/: requirements.txt
